--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Lumen
+APP_NAME=API_Marvel
 APP_ENV=local
-APP_KEY=
+APP_KEY=irNnhHhJDdyfwJsOtTTWccW72kOEKYXI
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
@@ -11,9 +11,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=db_marvel
+DB_USERNAME=root
+DB_PASSWORD=123456
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
