--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=API_Marvel
 APP_ENV=local
-APP_KEY=irNnhHhJDdyfwJsOtTTWccW72kOEKYXI
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
